--- a/ARTICLE.HTML
+++ b/ARTICLE.HTML
@@ -1,4 +1,4 @@
-<!doctype html>
+s<!doctype html>
 <html>
 <head>
    <meta charset="UTF-8">
@@ -108,25 +108,51 @@ body::after {
 
 INTERNATIONATIONAL + NATIONAL NEWS(INDIA)
 
-<H2>📰 National News (India)</H2>
+<P>National News (India)
+India AI Impact Summit 2026: Prime Minister Narendra Modi formally inaugurated the summit at Bharat Mandapam, New Delhi. He declared that India sees its future in AI rather than fearing it and invited the world to "Design and Develop in India".
+Google's $15 Billion Investment: Google announced the "America-India Connect" subsea cable initiative, a massive 5-year project to establish a new subsea gateway in Visakhapatnam to boost AI connectivity.
+Ramzan 2026 Begins: The holy month of fasting begins today across India following the sighting of the crescent moon yesterday evening.
+Shiv Jayanti Celebrations: Maharashtra and other parts of India are celebrating the birth anniversary of the Maratha warrior king Chhatrapati Shivaji Maharaj.
+Rajya Sabha Elections: The Election Commission of India announced that biennial elections for vacant seats across 10 states will be held on March 16.
+Domestic Cricket History: Jammu and Kashmir scripted history by reaching their maiden Ranji Trophy final. 
+The Hindu
+The Hindu
+ +10</P>
+<P>International News
+U.S. "Board of Peace" Meeting: President Donald Trump is scheduled to chair a meeting regarding a $5 billion pledge for Gaza's humanitarian and reconstruction efforts.
+South Korea Sentencing: Former President Yoon Suk Yeol has been sentenced to life imprisonment for insurrection following his short-lived martial law declaration in late 2024.
+California Avalanche Tragedy: Rescue teams found eight skiers dead and are searching for one more near Lake Tahoe, marking the deadliest U.S. avalanche in nearly 50 years.
+India-France Partnership: President Emmanuel Macron's visit culminated in the elevation of bilateral ties to a "Special Global Strategic Partnership," focusing on defense and AI.
+Iran Military Drills: Iran temporarily closed parts of the Strait of Hormuz for live-fire exercises amid escalating tensions with the U.S.. 
+The Indian Express
+The Indian Express
+ +4
+Would you like more specific details on the AI Summit announcements or perhaps a deeper look into the regional weather updates for today?
+AI responses may include mistakes. Learn more</P>
 
-<P>Lok Sabha session update: Parliament proceedings were suspended until 9 March morning, affecting key legislative business.
 
-Cricket news (major national sports): Ahead of the India-Pakistan T20 match, Suryakumar Yadav discusses inclusion of Abhishek Sharma in the Indian XI.
 
-Domestic legal case: An Indian national pleaded guilty in the U.S. for a foiled murder-for-hire plot involving a Khalistani separatist figure.</P>
 
-<H2>🌍 International News</H2>
 
-<P>Cricket rivalry headline: As India and Pakistan prepare for their T20 World Cup clash, fans are bracing emotionally for the match outcome.</P>
 
-<H2>🧭 Context & Ongoing Issues Affecting India</H2>
 
-<P>Here are some broader developments that continue to shape both national and international news contexts around India:</P>
 
-<H2>📌 Geopolitical & Security</H2>
 
-<p>India has faced heightened tensions with Pakistan following military strikes and ceasefire cycles in 2025, part of the broader 2025 India–Pakistan crisis.</P>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <A HREF="INDEX.HTML">BACK TO HOME</A>
 
