--- a/index.html
+++ b/index.html
@@ -37,18 +37,14 @@
 <h2> AI LIFE SKILL</H2>
 CLICK ON READ MORE TO KNOW MORE
 
+<a href="19 feb.html">read more</a>
+   
+<A HREF="space.html">READ MORE</A>
 
-<A HREF="ARTICLE.HTML">READ MORE</A>
-<A HREF="SPACE.HTML">TECHNOLOGY</A>
 </DIV>
 </DIV>
 
 n
-
-<A HREF="ARTICLE.HTML">READ MORE</A>
-<A HREF="SPACE.HTML">TECHNOLOGY</A>
-</DIV>
-</DIV>
 
 
 
@@ -57,9 +53,11 @@ n
 <H2>U.S. NEWS </H2>
 CLICK ON READ MORE TO KNOW MORE
 
+<a href="19 feb.html">read more</a>
+   
+<A HREF="space.html">READ MORE</A>
 
-<A HREF="ARTICLE.HTML">READ MORE</A>
-<A HREF="SPACE.HTML">TECHNOLOGY</A>
+
 </DIV>
 </DIV>
 </DIV>
@@ -166,4 +164,5 @@ body::after {
 
 </style>
 </head>
+
 </html>
