--- a/ARTICLE.HTML
+++ b/ARTICLE.HTML
@@ -1,4 +1,4 @@
-s<!doctype html>
+<!doctype html>
 <html>
 <head>
    <meta charset="UTF-8">
@@ -159,4 +159,5 @@ AI responses may include mistakes. Learn more</P>
 
 </DIV>
 </BODY>
+
 </HTML>
