--- a/ARTICLE.HTML
+++ b/ARTICLE.HTML
@@ -108,33 +108,28 @@ body::after {
 
 INTERNATIONATIONAL + NATIONAL NEWS(INDIA)
 
-<P>National News (India)
-India AI Impact Summit 2026: Prime Minister Narendra Modi formally inaugurated the summit at Bharat Mandapam, New Delhi. He declared that India sees its future in AI rather than fearing it and invited the world to "Design and Develop in India".
-Google's $15 Billion Investment: Google announced the "America-India Connect" subsea cable initiative, a massive 5-year project to establish a new subsea gateway in Visakhapatnam to boost AI connectivity.
-Ramzan 2026 Begins: The holy month of fasting begins today across India following the sighting of the crescent moon yesterday evening.
-Shiv Jayanti Celebrations: Maharashtra and other parts of India are celebrating the birth anniversary of the Maratha warrior king Chhatrapati Shivaji Maharaj.
-Rajya Sabha Elections: The Election Commission of India announced that biennial elections for vacant seats across 10 states will be held on March 16.
-Domestic Cricket History: Jammu and Kashmir scripted history by reaching their maiden Ranji Trophy final. 
-The Hindu
-The Hindu
- +10</P>
-<P>International News
-U.S. "Board of Peace" Meeting: President Donald Trump is scheduled to chair a meeting regarding a $5 billion pledge for Gaza's humanitarian and reconstruction efforts.
-South Korea Sentencing: Former President Yoon Suk Yeol has been sentenced to life imprisonment for insurrection following his short-lived martial law declaration in late 2024.
-California Avalanche Tragedy: Rescue teams found eight skiers dead and are searching for one more near Lake Tahoe, marking the deadliest U.S. avalanche in nearly 50 years.
-India-France Partnership: President Emmanuel Macron's visit culminated in the elevation of bilateral ties to a "Special Global Strategic Partnership," focusing on defense and AI.
-Iran Military Drills: Iran temporarily closed parts of the Strait of Hormuz for live-fire exercises amid escalating tensions with the U.S.. 
-The Indian Express
-The Indian Express
+
+
+
+
+
+
+<h2>Top National News (India)</h2>
+<p>Pax Silica Alliance: India has officially joined the U.S.-led Pax Silica coalition, a strategic grouping aimed at securing supply chains for critical minerals and AI technology to counter China’s dominance.
+India AI Impact Summit: At the ongoing summit in Delhi, Mukesh Ambani announced a ₹10 lakh crore investment by Reliance and Jio to make AI affordable. Meanwhile, an awkward moment went viral when CEOs Sam Altman (OpenAI) and Dario Amodei (Anthropic) appeared to avoid physical contact during a group photo.
+Legal & Policy: The Supreme Court rejected a plea to ban naming mosques after the Mughal emperor Babur. Additionally, the EC has asked 22 states and UTs to begin the     Special Summary Revision (SIR) of electoral rolls in April. 
+</P>
+<h2>International & World News</h2>
+<p>UK Royal Scandal: Former Prince Andrew was arrested on his 66th birthday on suspicion of misconduct in public office related to the Jeffrey Epstein case. He was later released under investigation.
+South Korea Turmoil: Former President Yoon Suk Yeol was sentenced to life in prison for his attempt to impose martial law in late 2024.
+Trump & Aliens: U.S. President Donald Trump has directed the Pentagon to prepare for the release of classified files regarding UFOs and extraterrestrial life.
+Middle East Tensions: Trump issued an ultimatum to Iran, giving them 10–15 days to agree to a new nuclear deal or face "strong action". </P>
+BBC
+BBC
  +4
-Would you like more specific details on the AI Summit announcements or perhaps a deeper look into the regional weather updates for today?
-AI responses may include mistakes. Learn more</P>
-
-
-
-
-
-
+<h2>Sports & Entertainment</h2>
+<p>T20 World Cup: India defeated the Netherlands by 17 runs in Ahmedabad, maintaining an unbeaten record as they head into the Super Eight stage.
+Obituary: Actor Eric Dane, best known for his role as "McSteamy" in Grey's Anatomy, has passed away at age 53 following a battle with Als </p>
 
 
 
@@ -161,3 +156,4 @@ AI responses may include mistakes. Learn more</P>
 </BODY>
 
 </HTML>
+
