--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <h2> AI LIFE SKILL</H2>
 CLICK ON READ MORE TO KNOW MORE
 
-<a href="19 feb.html">read more</a>
+<a href="article.html">read more</a>
    
-<A HREF="space.html">READ MORE</A>
+<A HREF="space.html">technology</A>
 
 </DIV>
 </DIV>
 
-n
+
 
 
 
@@ -53,9 +53,9 @@ n
 <H2>U.S. NEWS </H2>
 CLICK ON READ MORE TO KNOW MORE
 
-<a href="19 feb.html">read more</a>
+<a href="article.html">read more</a>
    
-<A HREF="space.html">READ MORE</A>
+<A HREF="space.html">technology</A>
 
 
 </DIV>
@@ -166,3 +166,4 @@ body::after {
 </head>
 
 </html>
+
