--- a/ARTICLE.HTML
+++ b/ARTICLE.HTML
@@ -1,4 +1,4 @@
-<!doctype html>
+s<!doctype html>
 <html>
 <head>
    <meta charset="UTF-8">
@@ -107,13 +107,6 @@ body::after {
 
 
 INTERNATIONATIONAL + NATIONAL NEWS(INDIA)
-
-
-
-
-
-
-
 <h2>Top National News (India)</h2>
 <p>Pax Silica Alliance: India has officially joined the U.S.-led Pax Silica coalition, a strategic grouping aimed at securing supply chains for critical minerals and AI technology to counter China’s dominance.
 India AI Impact Summit: At the ongoing summit in Delhi, Mukesh Ambani announced a ₹10 lakh crore investment by Reliance and Jio to make AI affordable. Meanwhile, an awkward moment went viral when CEOs Sam Altman (OpenAI) and Dario Amodei (Anthropic) appeared to avoid physical contact during a group photo.
@@ -149,11 +142,47 @@ Obituary: Actor Eric Dane, best known for his role as "McSteamy" in Grey's Anato
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <A HREF="INDEX.HTML">BACK TO HOME</A>
 
 
 </DIV>
 </BODY>
-
 </HTML>
-
