--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
 <div class="container">
 <div class="container-card">
 
-<h2> AI LIFE SKILL</H2>
-CLICK ON READ MORE TO KNOW MORE
+<h2>PAX SILIA NEWS ,INDIA SHARES HAND WITH AMERICA</H2>
 
-<a href="article.html">read more</a>
-   
-<A HREF="space.html">technology</A>
 
+<A HREF="ARTICLE.HTML">READ MORE</A>
+<A HREF="SPACE.HTML">TECHNOLOGY</A>
+</DIV>
+</DIV>
+
+<H2>UK ROYAL SCANDAL....</H2>
+
+<A HREF="ARTICLE.HTML">READ MORE</A>
+<A HREF="SPACE.HTML">TECHNOLOGY</A>
 </DIV>
 </DIV>
 
@@ -48,16 +53,11 @@ CLICK ON READ MORE TO KNOW MORE
 
 
 
+<H2>T20 WORLD CUP UPADDATES ARE HERE</H2>
 
 
-<H2>U.S. NEWS </H2>
-CLICK ON READ MORE TO KNOW MORE
-
-<a href="article.html">read more</a>
-   
-<A HREF="space.html">technology</A>
-
-
+<A HREF="ARTICLE.HTML">READ MORE</A>
+<A HREF="SPACE.HTML">TECHNOLOGY</A>
 </DIV>
 </DIV>
 </DIV>
@@ -164,6 +164,4 @@ body::after {
 
 </style>
 </head>
-
 </html>
-
